--- a/Python/14. Python. Очистка данных/TSUM.ipynb
+++ b/Python/14. Python. Очистка данных/TSUM.ipynb
@@ -2358,8 +2358,7 @@
     "import numpy as np\n",
     "import plotly\n",
     "import plotly.express as px\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "# чтение данных\n",
     "data_parsing = pd.read_excel('data/Data_TSUM.xlsx', sheet_name='Data_Parsing', header=0)\n",
@@ -2425,8 +2424,91 @@
    "metadata": {},
    "source": [
     "Выводы по графикам:\n",
-    "- выбросы на графиках не наблюдаются  \n",
-    "Пройдем по категориям и брендам методами межквартильного размаха и z-отклонений."
+    "- выбросы на графиках не наблюдаются, но видно смещение усов в правую сторону.\n",
+    "Пройдем по брендам методами z-отклонений."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Число выбросов по методу z-отклонения в бренде Valentino: 0\n",
+      "Результирующее число записей: 25\n",
+      "Число выбросов по методу z-отклонения в бренде Brioni: 0\n",
+      "Результирующее число записей: 25\n",
+      "Число выбросов по методу z-отклонения в бренде Stone Island: 0\n",
+      "Результирующее число записей: 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "def outliers_z_score(data, feature, log_scale=False):\n",
+    "    if log_scale:\n",
+    "        x = np.log(data[feature]+1)\n",
+    "    else:\n",
+    "        x = data[feature]\n",
+    "    mu = x.mean()\n",
+    "    sigma = x.std()\n",
+    "    lower_bound = mu - 3 * sigma\n",
+    "    upper_bound = mu + 3 * sigma\n",
+    "    outliers = data[(x < lower_bound) | (x > upper_bound)]\n",
+    "    cleaned = data[(x > lower_bound) & (x < upper_bound)]\n",
+    "    return outliers, cleaned\n",
+    "\n",
+    "def outliers_z_score_mod(data, feature, log_scale=False, left=3, right=3):\n",
+    "    if log_scale:\n",
+    "        x = np.log(data[feature]+1)\n",
+    "    else:\n",
+    "        x = data[feature]\n",
+    "    mu = x.mean()\n",
+    "    sigma = x.std()\n",
+    "    lower_bound = mu - left * sigma\n",
+    "    upper_bound = mu + right * sigma\n",
+    "    outliers = data[(x < lower_bound) | (x > upper_bound)]\n",
+    "    cleaned = data[(x > lower_bound) & (x < upper_bound)]\n",
+    "    return outliers, cleaned\n",
+    "\n",
+    "brand_list = list(data_parsing['brand_x'].value_counts().index)\n",
+    "\n",
+    "# запустим цикл, в котором с каждой итерацией по бренду будем получать выбросы в признаке 'price_difference'\n",
+    "for brand_name in brand_list:\n",
+    "\n",
+    "    mask = data_parsing['brand_x'] == brand_name\n",
+    "    outliers, cleaned = outliers_z_score(data_parsing[mask], 'dif_price')\n",
+    "    print(f'Число выбросов по методу z-отклонения в бренде {brand_name}: {outliers.shape[0]}')\n",
+    "    print(f'Результирующее число записей: {cleaned.shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Число выбросов по методу z-отклонения в бренде Valentino: 1\n",
+      "Результирующее число записей: 24\n",
+      "Число выбросов по методу z-отклонения в бренде Brioni: 2\n",
+      "Результирующее число записей: 23\n",
+      "Число выбросов по методу z-отклонения в бренде Stone Island: 2\n",
+      "Результирующее число записей: 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "for brand_name in brand_list:\n",
+    "\n",
+    "    mask = data_parsing['brand_x'] == brand_name\n",
+    "    outliers, cleaned = outliers_z_score_mod(data_parsing[mask], 'dif_price', left=2, right=2)\n",
+    "    print(f'Число выбросов по методу z-отклонения в бренде {brand_name}: {outliers.shape[0]}')\n",
+    "    print(f'Результирующее число записей: {cleaned.shape[0]}')"
    ]
   }
  ],
