--- a/Python/15. Python. ООП/15. Python.ipynb
+++ b/Python/15. Python. ООП/15. Python.ipynb
@@ -366,6 +366,345 @@
     "print(logger.show_last(\"info\"))\n",
     "# System started"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Paw'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Задание 6.3\n",
+    "# Определите класс Dog, у которого есть методы bark и give_paw. \n",
+    "# При этом, пусть методы принимают список из любого количества аргументов.\n",
+    "\n",
+    "# bark возвращает строку \"Bark!\"\n",
+    "# give_paw возвращает строку \"Paw\"\n",
+    "\n",
+    "class Dog():\n",
+    "    \n",
+    "    def bark(*self):\n",
+    "        return \"Bark!\"\n",
+    "    \n",
+    "    def give_paw(*self):\n",
+    "        return \"Paw\"\n",
+    "    \n",
+    "get = Dog()\n",
+    "get.give_paw(['d', 'd'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\\test\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<generator object _walk at 0x000001ED2A9A30B0>"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "my_dir = os.getcwd()\n",
+    "\n",
+    "print(os.path.join(my_dir, 'test'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\n",
+      "---\n",
+      "Список папок ['10. Python. Pandas', '11. Python. Pandas', '12. Python. Pandas', '13. Python. Визуализация', '14. Python. Очистка данных', '15. Python. ООП']\n",
+      "---\n",
+      "Список файлов ['9. Python. NumPy.ipynb']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\9. Python. NumPy.ipynb\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\n",
+      "---\n",
+      "Список папок ['data']\n",
+      "---\n",
+      "Список файлов ['10.Python. Pandas.ipynb']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\\10.Python. Pandas.ipynb\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\\data\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\\data\n",
+      "---\n",
+      "Папок нет\n",
+      "---\n",
+      "Список файлов ['countries.csv', 'melb_data.csv', 'students_performance.csv']\n",
+      "---\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\\data\\countries.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\\data\\melb_data.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\10. Python. Pandas\\data\\students_performance.csv\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\n",
+      "---\n",
+      "Список папок ['data']\n",
+      "---\n",
+      "Список файлов ['11. Python. Pandas.ipynb']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\11. Python. Pandas.ipynb\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\data\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\data\n",
+      "---\n",
+      "Папок нет\n",
+      "---\n",
+      "Список файлов ['citibike-tripdata.csv', 'melb_data_ps.csv', 'melb_data_ps_copy.csv', 'melb_df_ps_copy.csv', 'ufo.csv']\n",
+      "---\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\data\\citibike-tripdata.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\data\\melb_data_ps.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\data\\melb_data_ps_copy.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\data\\melb_df_ps_copy.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\11. Python. Pandas\\data\\ufo.csv\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\n",
+      "---\n",
+      "Список папок ['data']\n",
+      "---\n",
+      "Список файлов ['12. Python. Pandas.ipynb']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\12. Python. Pandas.ipynb\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\n",
+      "---\n",
+      "Список папок ['movies_data', 'orders_and_products']\n",
+      "---\n",
+      "Список файлов ['melb_data_fe.csv', 'ratings_movies.csv']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\melb_data_fe.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\ratings_movies.csv\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\movies_data\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\orders_and_products\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\movies_data\n",
+      "---\n",
+      "Папок нет\n",
+      "---\n",
+      "Список файлов ['dates.csv', 'movies.csv', 'ratings1.csv', 'ratings2.csv']\n",
+      "---\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\movies_data\\dates.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\movies_data\\movies.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\movies_data\\ratings1.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\movies_data\\ratings2.csv\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\orders_and_products\n",
+      "---\n",
+      "Папок нет\n",
+      "---\n",
+      "Список файлов ['orders.csv', 'products.csv']\n",
+      "---\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\orders_and_products\\orders.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\12. Python. Pandas\\data\\orders_and_products\\products.csv\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\n",
+      "---\n",
+      "Список папок ['data']\n",
+      "---\n",
+      "Список файлов ['churn.ipynb', 'python 13.ipynb', 'Types_of_visualization.ipynb']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\churn.ipynb\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\python 13.ipynb\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\Types_of_visualization.ipynb\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\data\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\data\n",
+      "---\n",
+      "Папок нет\n",
+      "---\n",
+      "Список файлов ['churn.csv', 'country_vaccinations.csv', 'covid_data.csv']\n",
+      "---\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\data\\churn.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\data\\country_vaccinations.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\13. Python. Визуализация\\data\\covid_data.csv\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\n",
+      "---\n",
+      "Список папок ['data']\n",
+      "---\n",
+      "Список файлов ['14. Python.ipynb', 'TSUM.ipynb']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\\14. Python.ipynb\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\\TSUM.ipynb\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\\data\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\\data\n",
+      "---\n",
+      "Папок нет\n",
+      "---\n",
+      "Список файлов ['Data_TSUM.xlsx', 'diabetes_data.csv', 'sber_data.csv']\n",
+      "---\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\\data\\Data_TSUM.xlsx\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\\data\\diabetes_data.csv\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\14. Python. Очистка данных\\data\\sber_data.csv\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\n",
+      "---\n",
+      "Список папок ['archive']\n",
+      "---\n",
+      "Список файлов ['15. Python.ipynb', 'index.html']\n",
+      "---\n",
+      "Все пути:\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\\15. Python.ipynb\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\\index.html\n",
+      "Папка  d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\\archive\n",
+      "===\n",
+      "Текущая директория d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\\archive\n",
+      "---\n",
+      "Папок нет\n",
+      "---\n",
+      "Список файлов ['23-01-29.pkl']\n",
+      "---\n",
+      "Файл  d:\\documents\\SkillFactory\\IDE\\Python\\15. Python. ООП\\archive\\23-01-29.pkl\n",
+      "===\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Задание 7.3\n",
+    "# Задание на самопроверку.\n",
+    "\n",
+    "# Сделайте функцию, которая принимает от пользователя путь и выводит всю информацию о содержимом этой папки. \n",
+    "# Для реализации используйте функцию встроенного модуля os.walk(). \n",
+    "# Если путь не указан, то сравнение начинается с текущей директории.\n",
+    "import os\n",
+    "\n",
+    "def walk_desc(path=None):\n",
+    "    start_path = path if path is not None else os.getcwd()\n",
+    "\n",
+    "    for root, dirs, files in os.walk(start_path):\n",
+    "        print(\"Текущая директория\", root)\n",
+    "        print(\"---\")\n",
+    "\n",
+    "        if dirs:\n",
+    "            print(\"Список папок\", dirs)\n",
+    "        else:\n",
+    "            print(\"Папок нет\")\n",
+    "        print(\"---\")\n",
+    "\n",
+    "        if files:\n",
+    "            print(\"Список файлов\", files)\n",
+    "        else:\n",
+    "            print(\"Файлов нет\")\n",
+    "        print(\"---\")\n",
+    "\n",
+    "        if files and dirs:\n",
+    "            print(\"Все пути:\")\n",
+    "        for f in files:\n",
+    "            print(\"Файл \", os.path.join(root, f))\n",
+    "        for d in dirs:\n",
+    "            print(\"Папка \", os.path.join(root, d))\n",
+    "        print(\"===\")\n",
+    "    \n",
+    "walk_desc('d:\\documents\\SkillFactory\\IDE\\Python')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Задание 7.4\n",
+    "# Задание на самопроверку.\n",
+    "\n",
+    "# Создайте любой файл на операционной системе под название input.txt и построчно перепишите его в файл output.txt.\n",
+    "\n",
+    "i = open('data\\input.txt', 'r')\n",
+    "o = open('data\\output.txt', 'w')\n",
+    "for line in i:\n",
+    "    o.writelines(line)\n",
+    "    \n",
+    "i.close()\n",
+    "o.close()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Задание 7.5\n",
+    "# Задание на самопроверку.\n",
+    "\n",
+    "# Дан файл numbers.txt, компоненты которого являются действительными числами \n",
+    "# (файл создайте самостоятельно и заполните любыми числам, в одной строке одно число). \n",
+    "# Найдите сумму наибольшего и наименьшего из значений и запишите результат в файл output.txt.\n",
+    "\n",
+    "with open('data//numbers.txt', 'r') as numbs:\n",
+    "    min_ = max_ = float(numbs.readline())\n",
+    "    for numb in numbs:\n",
+    "        if float(numb) > max_:\n",
+    "            max_ = float(numb)\n",
+    "        if float(numb) < min_:\n",
+    "            min_ = float(numb)\n",
+    "    sum_ = min_ + max_\n",
+    "    \n",
+    "with open('data/output.txt', 'w') as out_:\n",
+    "    out_.write(str(sum_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Задание 7.6\n",
+    "# Задание на самопроверку.\n",
+    "\n",
+    "# В текстовый файл построчно записаны фамилии и имена учащихся класса и их оценки за контрольную. \n",
+    "# Подсчитайте количество учащихся, чья оценка меньше 3 баллов.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
