--- a/Python/15. Python. ООП/15. Python.ipynb
+++ b/Python/15. Python. ООП/15. Python.ipynb
@@ -694,16 +694,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# Задание 7.6\n",
     "# Задание на самопроверку.\n",
     "\n",
     "# В текстовый файл построчно записаны фамилии и имена учащихся класса и их оценки за контрольную. \n",
     "# Подсчитайте количество учащихся, чья оценка меньше 3 баллов.\n",
-    "\n"
+    "\n",
+    "with open('data//marks.txt', 'r', encoding='utf8') as marks:\n",
+    "\n",
+    "    count = 0\n",
+    "    for mark in marks:\n",
+    "        if float(mark.split()[-1]) < 3:\n",
+    "             count += 1\n",
+    "    print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Задание 7.7\n",
+    "# Задание на самопроверку.\n",
+    "\n",
+    "# Выполните реверсирование строк файла (перестановку строк файла в обратном порядке).\n",
+    "\n",
+    "with open(\"data//marks.txt\", \"r\", encoding='utf8') as input_file:\n",
+    "    with open(\"data//marks2.txt\", \"w\") as output_file:\n",
+    "        for line in reversed(input_file.readlines()):\n",
+    "            output_file.write(line)"
    ]
   }
  ],
