--- a/Python/13. Python. Визуализация/churn.ipynb
+++ b/Python/13. Python. Визуализация/churn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -21106,7 +21106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42062,7 +42062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -63000,7 +63000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63921,9 +63921,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NumOfProducts</th>\n",
+       "      <th>loyalty</th>\n",
+       "      <th>RowNumber</th>\n",
+       "      <th>CustomerId</th>\n",
+       "      <th>Surname</th>\n",
+       "      <th>CreditScore</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tenure</th>\n",
+       "      <th>Balance</th>\n",
+       "      <th>HasCrCard</th>\n",
+       "      <th>IsActiveMember</th>\n",
+       "      <th>EstimatedSalary</th>\n",
+       "      <th>Exited</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Лояльные клиенты</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ушедшие клиенты</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "      <td>1409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Лояльные клиенты</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "      <td>4242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ушедшие клиенты</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "      <td>348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Лояльные клиенты</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Ушедшие клиенты</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "      <td>220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Ушедшие клиенты</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   NumOfProducts           loyalty  RowNumber  CustomerId  Surname  \\\n",
+       "0              1  Лояльные клиенты       3675        3675     3675   \n",
+       "1              1   Ушедшие клиенты       1409        1409     1409   \n",
+       "2              2  Лояльные клиенты       4242        4242     4242   \n",
+       "3              2   Ушедшие клиенты        348         348      348   \n",
+       "4              3  Лояльные клиенты         46          46       46   \n",
+       "5              3   Ушедшие клиенты        220         220      220   \n",
+       "6              4   Ушедшие клиенты         60          60       60   \n",
+       "\n",
+       "   CreditScore  Geography  Gender   Age  Tenure  Balance  HasCrCard  \\\n",
+       "0         3675       3675    3675  3675    3675     3675       3675   \n",
+       "1         1409       1409    1409  1409    1409     1409       1409   \n",
+       "2         4242       4242    4242  4242    4242     4242       4242   \n",
+       "3          348        348     348   348     348      348        348   \n",
+       "4           46         46      46    46      46       46         46   \n",
+       "5          220        220     220   220     220      220        220   \n",
+       "6           60         60      60    60      60       60         60   \n",
+       "\n",
+       "   IsActiveMember  EstimatedSalary  Exited  \n",
+       "0            3675             3675    3675  \n",
+       "1            1409             1409    1409  \n",
+       "2            4242             4242    4242  \n",
+       "3             348              348     348  \n",
+       "4              46               46      46  \n",
+       "5             220              220     220  \n",
+       "6              60               60      60  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -64850,7 +65051,7 @@
     "\n",
     "group1 = churn_data.groupby(by=['NumOfProducts','loyalty'], as_index = False).count()\n",
     "\n",
-    "\n",
+    "display(group1)\n",
     "fig = px.bar(\n",
     "    group1, \n",
     "    x='NumOfProducts', \n",
@@ -64887,7 +65088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -65777,7 +65978,7 @@
          }
         },
         "title": {
-         "text": "Зависимость оттока клиентов от числа приобретённых у банка услуг"
+         "text": "Зависимость оттока клиентов от их активности"
         },
         "xaxis": {
          "anchor": "y",
@@ -65843,7 +66044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -66822,7 +67023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -67883,7 +68084,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10 (tags/v3.9.10:f2f3f53, Jan 17 2022, 15:14:21) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4,
   "vscode": {
