--- a/EDA/EDA-3. Проектирование признаков/eda3.ipynb
+++ b/EDA/EDA-3. Проектирование признаков/eda3.ipynb
@@ -3009,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3289,6 +3289,74 @@
     "sns.kdeplot(df_r['exponential'], ax=ax1)\n",
     "sns.kdeplot(df_r['normal_p'], ax=ax1)\n",
     "sns.kdeplot(df_r['normal_l'], ax=ax1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "До масштабирования:    [[10 17 35]]\n",
+      "После масштабирования: [[0.   0.28 1.  ]]\n",
+      "min: 10 max: 35\n",
+      "min: 0.0 max: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "# Создать признак\n",
+    "X_data = np.array([[10], [17], [35]])\n",
+    "\n",
+    "# Создание экземпляра класса MinMaxScaler(), диапазон {0,1}\n",
+    "minmax_scaler = preprocessing.MinMaxScaler(feature_range=(0,1))\n",
+    "\n",
+    "# Масштабирование признака\n",
+    "X_data_scaled = minmax_scaler.fit_transform(X_data)\n",
+    "\n",
+    "# Данные до и после масштабирования\n",
+    "print('До масштабирования:   ', X_data[:5].T)\n",
+    "print('После масштабирования:',  X_data_scaled[:5].T)\n",
+    "\n",
+    "# Min и Max значения до и после масштабирования\n",
+    "print('min:', X_data.min(), 'max:', X_data.max())\n",
+    "print('min:', X_data_scaled.min(), 'max:', X_data_scaled.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "До масштабирования:    [[30 40 35 57 15]]\n",
+      "После масштабирования: [[0.   0.28 1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Масштабирование данных, имеющих сильные выбросы\n",
+    "# Создать признак\n",
+    "X_data = np.array([[30], [40], [35], [57], [15]])\n",
+    "\n",
+    "# Создание экземпляра класса RobustScaler()\n",
+    "robust_scaler = preprocessing.RobustScaler()\n",
+    "\n",
+    "# Масштабирование признака\n",
+    "X_data_robust = robust_scaler.fit_transform(X_data)\n",
+    "\n",
+    "# Данные до и после масштабирования\n",
+    "print('До масштабирования:   ', X_data[:5].T)\n",
+    "print('После масштабирования:',  X_data_scaled[:5].T)"
    ]
   },
   {
