--- a/EDA/EDA-5. A_B-тестирование/Template_EDA_5.ipynb
+++ b/EDA/EDA-5. A_B-тестирование/Template_EDA_5.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
    "id": "a974b482-e192-4014-8520-8a5c0c946da6",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "id": "b0d18245-b9da-44bd-8aea-d272ea74b63a",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4   864975  2021-01-21     A         1  150000"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "id": "23496521-4878-46e2-ab02-1a98be14884a",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "id": "604c619d-6338-45c8-8248-ac098a2366bb",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "id": "02bf0148-488e-4f34-95bf-37794b2fa98b",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "id": "57a2d711-057d-4f8b-9f56-df0f772d41c8",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "id": "f618b34b-35a3-4bf1-8d6d-38b3401930b7",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "id": "5c0c018e-a250-48e9-b72a-e3c7be586ebd",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
        "1     B        145381            17290  1533010000"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "id": "bd9c3b3e-5956-41a8-bae0-43693f6de1f2",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
        "1     B        145381            17290  1533010000       11.89     88665.0"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "id": "78d46a02-cc30-4783-9b18-9fc9c6a08012",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
        "200000  1724  1694"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 11,
    "id": "f634fa8d-585c-42e3-b7d5-78e8d9eaa8c5",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "id": "4503b528-412e-433a-bc03-da7da52fa1a3",
    "metadata": {},
    "outputs": [
@@ -836,7 +836,7 @@
        "3 2021-01-03     B     6619       754  65960000       11.39     87480.0"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 13,
    "id": "afe59f9a-8d39-45c1-a14f-9f62091d81a1",
    "metadata": {},
    "outputs": [
@@ -891,86 +891,66 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:4: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:5: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_A['cum_users'] = group_A['user_id'].cumsum()\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:6: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_A['cum_purchases'] = group_A['purchase'].cumsum()\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:7: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_A['cum_price'] = group_A['price'].cumsum()\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:8: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_A['cum_conversion'] = round((group_A['cum_purchases'] / group_A['cum_users'] * 100), 2)\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:10: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_A['cum_mean_check'] = round(group_A['cum_price']/group_A['cum_purchases'])\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:11: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_B['cum_users'] = group_B['user_id'].cumsum()\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:12: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_B['cum_purchases'] = group_B['purchase'].cumsum()\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:13: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_B['cum_price'] = group_B['price'].cumsum()\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n",
-      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_13688\\3736985263.py:14: SettingWithCopyWarning:\n",
-      "\n",
-      "\n",
+      "  group_B['cum_conversion'] = round((group_B['cum_purchases'] / group_B['cum_users'] * 100), 2)\n",
+      "C:\\Users\\u1\\AppData\\Local\\Temp\\ipykernel_10508\\3736985263.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\n"
+      "  group_B['cum_mean_check'] = round(group_B['cum_price']/group_B['cum_purchases'])\n"
      ]
     }
    ],
@@ -1008,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 14,
    "id": "27e23d20-7ed6-4a26-973d-6d0320b81adb",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "id": "760bb9ea",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 16,
    "id": "9dd1f6fd-2fa0-4a2f-8181-dbed4c302bce",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 17,
    "id": "ba12c302",
    "metadata": {},
    "outputs": [
@@ -1322,7 +1302,7 @@
        "[290688 rows x 5 columns]"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 18,
    "id": "e9decb7d-ff5e-40a6-8b71-63627c4ef64a",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 19,
    "id": "db160e21",
    "metadata": {},
    "outputs": [
@@ -1446,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 20,
    "id": "898041ae-de7e-4b74-975e-111d494fbb82",
    "metadata": {},
    "outputs": [
@@ -1506,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 21,
    "id": "082dbeec",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2035,7 @@
        "45 2021-01-24     B     3677       442  38650000       12.02     87443.0"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2066,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 22,
    "id": "05d43f23-2c2d-4795-bb96-1ffbfe81c391",
    "metadata": {},
    "outputs": [
@@ -2139,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 23,
    "id": "60070586",
    "metadata": {},
    "outputs": [
@@ -2149,7 +2129,7 @@
        "23"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2160,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 24,
    "id": "480430db-ffae-4aad-8e22-f5c70d4800b8",
    "metadata": {},
    "outputs": [
@@ -2244,6 +2224,196 @@
     "**ВЫВОДЫ**\n",
     "1. Предпочтительным вариантом дизайна является вариант B.\n",
     "2. Хоть конверсия в обеих исследуемых группах не имеет статистической разницы, однако средний чек в группе В выше и данный показатель статистически значим. Так как при прочих равных средний чек влечет увеличение доходов, то второй вариант дизайна (новый) рекомендуется использовать на сайте компании."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2faf5b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>site</th>\n",
+       "      <th>dwell-time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>1</td>\n",
+       "      <td>144</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>0</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>0</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     site  dwell-time\n",
+       "0       0           2\n",
+       "1       1          48\n",
+       "2       0          15\n",
+       "3       1          16\n",
+       "4       0          38\n",
+       "..    ...         ...\n",
+       "295     0          22\n",
+       "296     0           7\n",
+       "297     1         144\n",
+       "298     0          89\n",
+       "299     0         138\n",
+       "\n",
+       "[300 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data/new-site.csv', sep='\\t')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d142d2fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91\n",
+      "88.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(df[df['site'] == 0]['dwell-time'].mean()))\n",
+    "print(df[df['site'] == 1]['dwell-time'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6cf9043d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0 = df[df['site'] == 0]\n",
+    "df1 = df[df['site'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a5cb9314",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=0.000\n",
+      "Данные не распределены нормально (мы отвергаем H0)\n",
+      "p=0.000\n",
+      "Данные не распределены нормально (мы отвергаем H0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ваш код здесь\n",
+    "H0 = 'Данные распределены нормально'\n",
+    "Ha = 'Данные не распределены нормально (мы отвергаем H0)'\n",
+    "alpha = 0.05\n",
+    "from scipy.stats import shapiro\n",
+    "_, p = shapiro(df0['dwell-time'])\n",
+    "print('p=%.3f' % p)\n",
+    "# Интерпретация \n",
+    "if p > alpha:\n",
+    "\tprint(H0)\n",
+    "else:\n",
+    "\tprint(Ha)\n",
+    " \n",
+    "_, p = shapiro(df1['dwell-time'])\n",
+    "print('p=%.3f' % p)\n",
+    "# Интерпретация \n",
+    "if p > alpha:\n",
+    "\tprint(H0)\n",
+    "else:\n",
+    "\tprint(Ha)"
    ]
   }
  ],
